# art_hug_03

./: .env.example  README.md  Taskfile.yml  pyproject.toml  requirements.txt
docs/: Taskfile.md  __init__.md  advanced_tokenization.md  article.md  article_orginal.md  basic_tokenization.md  changes.md  config.md  hf_hub_example.md  main.md  model_download_example.md  pipeline_example.md  project_analysis.md  run_all_examples.md  speech_recognition_example.md  subword_tokenization.md  test_oov_handling.md  tokenizer_comparison.md  translation_example.md  utils.md  verify_installation.md
notebooks/: Chapter_03_Environment_Setup.ipynb  Chapter_03_Tokenization.ipynb
notebooks/.ipynb_checkpoints/: Chapter_03_Environment_Setup-checkpoint.ipynb  Chapter_03_Tokenization-checkpoint.ipynb
src/: __init__.py  advanced_tokenization.py  basic_tokenization.py  config.py  hf_hub_example.py  main.py  model_download_example.py  pipeline_example.py  run_all_examples.py  speech_recognition_example.py  subword_tokenization.py  test_oov_handling.py  tokenizer_comparison.py  translation_example.py  utils.py  verify_installation.py
tests/: test_examples.py
