[tool.poetry]
name = "tokenization-fundamentals"
version = "0.1.0"
description = "Tokenization and Text Processing Fundamentals - Working Examples"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.1.0"
transformers = "^4.36.0"
sentencepiece = "^0.2.0"
tokenizers = "^0.15.0"
tiktoken = "^0.5.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
tabulate = "^0.9.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
datasets = "^3.6.0"
accelerate = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.6.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
